@@ -1,3 +1,7 @@
+2012-05-14 Emilie SAGNIEZ  <emilie@in-cite.net>
+	* Fix: Initialize renderEmpty function to tx_icsoddatastore_pi3 class
+	
+
 2012-05-03 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added datastore filemount.
 	* Refactor: Added TCA field files on filegroup.
